--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{{ page.title }}</title>
+        <title>micha.elmatt.es &#8211; {{ page.title }}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
     </head>
     <body>
