--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include head.html %}
 
-    <h1>{{ page.title }}</h1>
+    <h1>micha.elmatt.es &#8211; {{ page.title }}</h1>
 
     {{ content }}
 
